--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-shimmer-effects": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
